fix:Fix padding for all sections and header issue
Changed padding for header since it didn't align
properly with the rest of the content.

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,6 @@ a {
 
   display: flex;
   justify-content: space-between;
-  gap: 25%;
 }
 
 .hero-section {
@@ -43,7 +42,7 @@ a {
 }
 
 .title {
-  border: 1px solid green;
+  /* border: 1px solid green; */
 
   height: 225px;
   padding-top: 0;
@@ -56,7 +55,7 @@ a {
 footer {
   background-color: #1f2937;
 
-  padding: 0.8em 7em;
+  padding: 1rem 10rem;
 }
 
 .hero {
@@ -82,7 +81,7 @@ a {
   font-weight: 600;
   border: 2px solid #3882f6;
   border-radius: 5px;
-  padding: 7px 18px;
+  padding: 7px 30px;
 }
 
 .button.signUp {
@@ -102,7 +101,7 @@ h2 {
 .quote-section {
   background-color: #e5e7eb;
 
-  padding: 1em 8em;
+  padding: 1rem 10rem;
 }
 
 q {
@@ -130,5 +129,5 @@ q {
 
 .info-section,
 .sign-up-section {
-  padding: 1em 8em;
+  padding: 1rem 10rem;
 }
